// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBar renders correctly variant alert-orange 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  color: #fff;
  padding: 12px;
  background-color: #fff;
  color: #ff8c69;
}

.emotion-1 {
  fill: #ff8c69;
  vertical-align: middle;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-2 {
  font-size: 16px;
  line-height: 22px;
  padding-left: 16px;
  width: 100%;
}

<div
    class="sui-box emotion-0"
  >
    <svg
      class="sui-box sc-ui-icon emotion-1"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <p
      class="emotion-2"
    >
      Sample NotificationBar
    </p>
  </div>
</DocumentFragment>
`;

exports[`NotificationBar renders correctly variant alert-red 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  color: #fff;
  padding: 12px;
  background-color: #fff;
  color: #ef5774;
}

.emotion-1 {
  fill: #ef5774;
  vertical-align: middle;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-2 {
  font-size: 16px;
  line-height: 22px;
  padding-left: 16px;
  width: 100%;
}

<div
    class="sui-box emotion-0"
  >
    <svg
      class="sui-box sc-ui-icon emotion-1"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <p
      class="emotion-2"
    >
      Sample NotificationBar
    </p>
  </div>
</DocumentFragment>
`;

exports[`NotificationBar renders correctly variant info 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  color: #fff;
  padding: 12px;
  background-color: #e4edff;
  color: #3f6ed8;
}

.emotion-1 {
  fill: #3f6ed8;
  vertical-align: middle;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-2 {
  font-size: 16px;
  line-height: 22px;
  padding-left: 16px;
  width: 100%;
}

<div
    class="sui-box emotion-0"
  >
    <svg
      class="sui-box sc-ui-icon emotion-1"
      viewBox="0 0 24 24"
    >
      <path
        d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
      />
    </svg>
    <p
      class="emotion-2"
    >
      Sample NotificationBar
    </p>
  </div>
</DocumentFragment>
`;

exports[`NotificationBar renders correctly variant security 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  color: #fff;
  padding: 12px;
  background-color: #f6f5f7;
  color: #b2b6c3;
}

.emotion-1 {
  fill: #b2b6c3;
  vertical-align: middle;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-2 {
  font-size: 16px;
  line-height: 22px;
  padding-left: 16px;
  width: 100%;
}

<div
    class="sui-box emotion-0"
  >
    <svg
      class="sui-box sc-ui-icon emotion-1"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,17A2,2 0 0,0 14,15C14,13.89 13.1,13 12,13A2,2 0 0,0 10,15A2,2 0 0,0 12,17M18,8A2,2 0 0,1 20,10V20A2,2 0 0,1 18,22H6A2,2 0 0,1 4,20V10C4,8.89 4.9,8 6,8H7V6A5,5 0 0,1 12,1A5,5 0 0,1 17,6V8H18M12,3A3,3 0 0,0 9,6V8H15V6A3,3 0 0,0 12,3Z"
      />
    </svg>
    <p
      class="emotion-2"
    >
      Sample NotificationBar
    </p>
  </div>
</DocumentFragment>
`;

exports[`NotificationBar renders correctly variant success 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  color: #fff;
  padding: 12px;
  background-color: #cdfcf1;
  color: #45d6b5;
}

.emotion-1 {
  fill: #45d6b5;
  vertical-align: middle;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-2 {
  font-size: 16px;
  line-height: 22px;
  padding-left: 16px;
  width: 100%;
}

<div
    class="sui-box emotion-0"
  >
    <svg
      class="sui-box sc-ui-icon emotion-1"
      viewBox="0 0 24 24"
    >
      <path
        d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2,4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
      />
    </svg>
    <p
      class="emotion-2"
    >
      Sample NotificationBar
    </p>
  </div>
</DocumentFragment>
`;

exports[`NotificationBar renders correctly variant warning 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  color: #fff;
  padding: 12px;
  background-color: #ffe1e7;
  color: #ef5774;
}

.emotion-1 {
  fill: #ef5774;
  vertical-align: middle;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-2 {
  font-size: 16px;
  line-height: 22px;
  padding-left: 16px;
  width: 100%;
}

<div
    class="sui-box emotion-0"
  >
    <svg
      class="sui-box sc-ui-icon emotion-1"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <p
      class="emotion-2"
    >
      Sample NotificationBar
    </p>
  </div>
</DocumentFragment>
`;

exports[`NotificationBar renders correctly variant warning-blue 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  color: #fff;
  padding: 12px;
  background-color: #e4edff;
  color: #3f6ed8;
}

.emotion-1 {
  fill: #3f6ed8;
  vertical-align: middle;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-2 {
  font-size: 16px;
  line-height: 22px;
  padding-left: 16px;
  width: 100%;
}

<div
    class="sui-box emotion-0"
  >
    <svg
      class="sui-box sc-ui-icon emotion-1"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <p
      class="emotion-2"
    >
      Sample NotificationBar
    </p>
  </div>
</DocumentFragment>
`;

exports[`NotificationBar renders correctly variant warning-orange 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  color: #fff;
  padding: 12px;
  background-color: #ffefe6;
  color: #ff8c69;
}

.emotion-1 {
  fill: #ff8c69;
  vertical-align: middle;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-2 {
  font-size: 16px;
  line-height: 22px;
  padding-left: 16px;
  width: 100%;
}

<div
    class="sui-box emotion-0"
  >
    <svg
      class="sui-box sc-ui-icon emotion-1"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <p
      class="emotion-2"
    >
      Sample NotificationBar
    </p>
  </div>
</DocumentFragment>
`;

exports[`NotificationBar renders correctly with default values 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  color: #fff;
  padding: 12px;
  background-color: #ffe1e7;
  color: #ef5774;
}

.emotion-1 {
  fill: #ef5774;
  vertical-align: middle;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-2 {
  font-size: 16px;
  line-height: 22px;
  padding-left: 16px;
  width: 100%;
}

<div
    class="sui-box emotion-0"
  >
    <svg
      class="sui-box sc-ui-icon emotion-1"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <p
      class="emotion-2"
    >
      Sample NotificationBar
    </p>
  </div>
</DocumentFragment>
`;
